# pyaurorax

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pycodestyle  .pylintrc  CODE_OF_CONDUCT.md  COVERAGE.md  DEVELOPERS.md  DEVELOPER_GUIDE.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  docs.yml  python-package.yml  sphinx-build.yml  test.yml  test_all_platforms.yml  test_default.yml  test_standard.yml  tests.yml  tests_all_platforms.yml  tests_default.yml
aurorax/: __init__.py  api.py  availability.py  conjunctions.py  data_products.py  dataproducts.py  ephemeris.py  exceptions.py  location.py  metadata.py  models.py  requests.py  sources.py  util.py
aurorax/_internal/: util.py
aurorax/api/: __init__.py  _api.py  _urls.py
aurorax/api_old/: __init__.py  _api.py  _urls.py
aurorax/availability/: __init__.py  _availability.py
aurorax/availability_old/: _availability.py
aurorax/conjunctions/: __init__.py  _conjunctions.py  _search.py
aurorax/conjunctions_old/: _conjunctions.py
aurorax/data_products/: __init__.py  _data_products.py  _search.py
aurorax/data_products_old/: _data_products.py
aurorax/ephemeris/: __init__.py  _ephemeris.py  _search.py
aurorax/ephemeris_old/: _search.py
aurorax/metadata/: __init__.py  _metadata.py
aurorax/requests/: __init__.py
aurorax/sources/: __init__.py  _sources.py
aurorax/sources_old/: _sources.py
aurorax/util/: __init__.py  _translations.py
docs/: .buildinfo  CNAME  about.md  about_the_data.md  aurorax.conjunctions.html  aurorax.dataproducts.html  aurorax.ephemeris.html  aurorax.html  genindex.html  index.html  index.js  index.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  testpage.html
docs/_sources/: aurorax.conjunctions.rst.txt  aurorax.ephemeris.rst.txt  aurorax.rst.txt  index.rst.txt
docs/about_the_data/: categories.md
docs/aurorax/: api.html  aurorax.md  availability.html  conjunctions.html  data_products.html  ephemeris.html  exceptions.html  index.html  metadata.html  models.html  requests.html  sources.html  util.html
docs/aurorax/util/: index.html
docs/pyaurorax/: overview.md
docs/pyaurorax/aurorax/: availability.html  models.html  requests.html
docs/stylesheets/: extra.css
docs/templates/: head.mako
docsource/: Makefile  aurorax.dataproducts.rst  aurorax.ephemeris.rst  aurorax.rst  conf.py  index.rst  requirements.txt  testpage.rst
docsource/_build/doctrees/: aurorax.conjunctions.doctree  aurorax.dataproducts.doctree  aurorax.doctree  aurorax.ephemeris.doctree  environment.pickle  index.doctree  modules.doctree  testpage.doctree
docsource/_build/html/: .buildinfo  aurorax.conjunctions.html  aurorax.dataproducts.html  aurorax.ephemeris.html  aurorax.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/notebooks/: availability.ipynb  data_sources.ipynb  delete_data_products.ipynb  delete_ephemeris.ipynb  metadata.ipynb  search_conjunctions.ipynb  search_data_products.ipynb  search_ephemeris.ipynb  upload_data_products.ipynb  upload_ephemeris.ipynb
examples/notebooks/data/: download_and_read_data.ipynb  download_skymaps_and_calibrations.ipynb  explore_datasets_and_observatories.ipynb
examples/notebooks/models/: trex_atm_forward.ipynb  trex_atm_forward_custom_neutral_profile.ipynb  trex_atm_forward_custom_neutral_profile_dregion.ipynb  trex_atm_forward_custom_spectrum.ipynb  trex_atm_forward_custom_spectrum_and_neutral_profile.ipynb  trex_atm_inverse.ipynb
examples/notebooks/search/: advanced_metadata_filter_searching.ipynb  availability.ipynb  data_sources.ipynb  metadata.ipynb  search_conjunctions.ipynb  search_data_products.ipynb  search_ephemeris.ipynb  search_ephemeris_ml.ipynb  search_ml_enhanced_searching.ipynb
examples/notebooks/tools/: .gitignore  add_contours_to_ccd_image.ipynb  add_contours_to_mosaic.ipynb  apply_calibration_rego.ipynb  apply_calibration_trex_nir.ipynb  bounding_box_extract_metric.ipynb  (+39 more)
examples/scripts/: get_version.py  initialize.py
pyaurorax/: __init__.py  _util.py  api.py  availability.py  conjunctions.py  data_products.py  ephemeris.py  exceptions.py  format.py  location.py  metadata.py  pyaurorax.py  requests.py  sources.py  util.py
pyaurorax/_internal/: util.py
pyaurorax/api/: __init__.py  _api.py  api.py
pyaurorax/availability/: __init__.py  _availability.py  availability.py
pyaurorax/cli/: cli.py  helpers.py  templates.py
pyaurorax/conjunctions/: __init__.py  _conjunctions.py  conjunctions.py
pyaurorax/data/: __init__.py
pyaurorax/data_products/: __init__.py  _data_products.py  data_products.py
pyaurorax/ephemeris/: __init__.py  _ephemeris.py  ephemeris.py
pyaurorax/metadata/: __init__.py  _metadata.py  metadata.py
pyaurorax/models/: __init__.py
pyaurorax/requests/: __init__.py  _requests.py  requests.py
pyaurorax/search/: __init__.py  location.py  metadata_filters.py
pyaurorax/sources/: __init__.py  _sources.py  sources.py
pyaurorax/tools/: __init__.py  _display.py  _movie.py  _scale_intensity.py  _util.py
pyaurorax/util/: __init__.py  _calculate_btrace.py  calculate_btrace.py  describe.py
tests/: conftest.py  test_api.py  test_aurorax.py
tests/notebooks/: upload_ephemeris.ipynb
tests/standalone/: add_ephemeris_source.py  delete_ephemeris_source.py  ephemeris_get_request_logs.py  ephemeris_get_request_status.py  ephemeris_search_class.py  ephemeris_wait_for_data.py  get_ephemeris_availability.py  get_ephemeris_source.py  get_ephemeris_source_stats.py  get_ephemeris_source_using_filters.py  get_ephemeris_source_using_identifier.py  get_ephemeris_sources.py  remove_ephemeris_source.py  request_get_logs.py  request_wait_for_data.py  update_ephemeris_source.py
tests/test_suite/: .env.sample  conftest.py  test_pyaurorax.py  test_version.py
tools/: bump_version.py  check_docstrings.py  check_for_license.py  update_coverage_file.py
(+527 files in other folders)
