[tool.poetry]
name = "pyaurorax"
version = "0.13.0"
description = "Python library for interacting with the AuroraX API"
readme = "README.md"
homepage = "https://github.com/aurorax-space/pyaurorax"
repository = "https://github.com/aurorax-space/pyaurorax"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
license = "MIT"
packages = [
    { include = "pyaurorax" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "aurorax",
    "space physics",
    "aurora",
    "aurora borealis",
    "northern lights",
    "southern lights",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
requests = "^2.28.1"
humanize = "^4.4.0"
pydantic = "^1.10.2"
click = "^8.1.3"
texttable = "^1.6.4"
aacgmv2 = { version = "^2.6.2", optional = true }
termcolor = "^2.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
aurorax-cli = "pyaurorax.cli.cli:cli"

[tool.poetry.extras]
aacgmv2 = ["aacgmv2"]

[tool.poetry.urls]
"Documentation" = "https://docs.aurorax.space/code/overview"
"API Reference" = "https://docs.aurorax.space/code/pyaurorax_api_reference/pyaurorax"
"Bug Tracker" = "https://github.com/aurorax-space/pyaurorax/issues"
"AuroraX Platform" = "https://aurorax.space"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pycodestyle = "^2.9.1"
pylint = "^2.15.3"
mypy = "^0.981"
pytest = "^7.1.3"
tabulate = "^0.8.10"
bandit = "^1.7.4"
autopep8 = "^1.7.0"
pdoc3 = "^0.10.0"
coverage = "^6.4.4"
types-python-dateutil = "^2.8.19"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
