[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyaurorax"
version = "1.8.0"
description = "Python library for interacting with the AuroraX platform"
readme = "README.md"
homepage = "https://github.com/aurorax-space/pyaurorax"
repository = "https://github.com/aurorax-space/pyaurorax"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
license = "MIT"
packages = [
    { include = "pyaurorax" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "aurorax",
    "space physics",
    "aurora",
    "aurora borealis",
    "northern lights",
    "southern lights",
]

[tool.poetry.urls]
"Documentation" = "https://docs.aurorax.space/code/overview"
"API Reference" = "https://docs.aurorax.space/code/pyaurorax_api_reference/pyaurorax"
"Bug Tracker" = "https://github.com/aurorax-space/pyaurorax/issues"
"AuroraX Platform" = "https://aurorax.space"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.1"
humanize = "^4.4.0"
click = "^8.1.3"
texttable = "^1.6.4"
aacgmv2 = "^2.6.2"
termcolor = "^2.0.1"
python-dateutil = "^2.8.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pyproj = "^3.6.1"
cartopy = "^0.23.0"
pyucalgarysrs = "1.7.1"

[tool.poetry.scripts]
aurorax-cli = "pyaurorax.cli.cli:cli"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.4"
pytest = "8.3.4"
pycodestyle = "2.12.1"
yapf = "0.43.0"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
bandit = "1.8.0"
pyright = "1.1.391"
pdoc3 = "0.11.5"
python-dotenv = "1.0.1"
tabulate = "0.9.0"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyaurorax/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyaurorax/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = [
    "tests/test_suite/**/*.py",
]
markers = [
    "top_level: top level PyAuroraX object tests",
    "search_accounts: account-related tests",
    "search_availability: data availability tests",
    "search_conjunctions: conjunction search tests",
    "search_data_products: data product tests",
    "search_ephemeris: ephemeris tests",
    "search_exceptions: exception handler tests",
    "search_location: location class tests",
    "search_metadata: metadata validation tests",
    "search_requests: request class tests",
    "search_sources: data sources tests",
    "search_util: utility function tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = []
