[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyaurorax"
version = "1.16.1"
description = "Python library for interacting with the AuroraX platform"
readme = "README.md"
homepage = "https://github.com/aurorax-space/pyaurorax"
repository = "https://github.com/aurorax-space/pyaurorax"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>",
    "Josh Houghton <joshua.houghton1@ucalgary.ca>"
]
license = "Apache License 2.0"
packages = [
    { include = "pyaurorax" },
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "aurorax",
    "space physics",
    "aurora",
    "aurora borealis",
    "northern lights",
    "southern lights",
]

[tool.poetry.urls]
"API Reference" = "https://docs.aurorax.space/code/pyaurorax_api_reference/pyaurorax"
"AuroraX Platform" = "https://aurorax.space"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.1"
humanize = "^4.4.0"
click = "^8.1.3"
texttable = "^1.6.4"
aacgmv2 = "^2.6.2"
termcolor = ">=2.0.1"
python-dateutil = "^2.8.2"
numpy = [
    {version = "^1.21.0", python = ">=3.9,<3.10"},
    {version = ">=1.21.0,<3.0.0", python = ">=3.10"}
]
matplotlib = [
    {version = "^3.4.0", python = ">=3.9,<3.10"},
    {version = "^3.5.0", python = ">=3.10"}
]
pyproj = [
    {version = "^3.6.1", python = ">=3.9,<3.10"},
    {version = "^3.7.0", python = ">=3.10"}
]
cartopy = [
    {version = "^0.23.0", python = ">=3.9,<3.10"},
    {version = "^0.24.0", python = ">=3.10"}
]
pyucalgarysrs = "1.20.1"

[tool.poetry.scripts]
aurorax-cli = "pyaurorax.cli.cli:cli"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.6"
pytest = "8.3.4"
pycodestyle = "2.12.1"
yapf = "0.43.0"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
bandit = "1.8.2"
pyright = "1.1.393"
pdoc3 = "0.11.5"
python-dotenv = "1.0.1"
tabulate = "0.9.0"
jupyter = "^1.1.1"
iprogress = "^0.4"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
nbmake = "^1.5.5"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyaurorax/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyaurorax/*.py",
    "pyaurorax/**/*.py",
    "examples/**/*.py",
    "examples/**/*.ipynb",
    "tests/test_suite/**/*.py",
    "tests/test_suite/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:aacgmv2.*",  # aacgmv2 v1.7.2 has a DeprecationWarning showing up, so we ignore it (https://github.com/aburrell/aacgmv2/issues/94)
]
testpaths = [
    "tests/test_suite",
]
python_files = "test_*.py"
markers = [
    "top_level: top level PyAuroraX object tests",
    "search_ro: search engine read-only tests",
    "search_rw: search engine read/write tests",
    "cli: command line interface tests",
    "data: data retrieval/reading tests",
    "models: model tests",
    "tools: analysis support tools tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = []
